fix show desc padding and alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -303,12 +303,6 @@
   flex-direction: column;
 }
 
-@media screen and (max-width: 767px) {
-  .show-content-right {
-    align-items: center;
-  }
-}
-
 .show-title h1 {
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 800;
@@ -316,15 +310,22 @@
   font-size: 65px;
 }
 
-@media screen and (max-width: 1125px) {
-  .show-title h1 {
-    font-size: 55px;
+.show-desc {
+  padding: 3rem;
+}
+
+@media screen and (max-width: 767px) {
+  .show-content-right {
+    align-items: center;
+  }
+  .show-desc {
+    text-align: center;
   }
 }
 
 @media screen and (max-width: 1125px) {
   .show-title h1 {
-    font-size: 45px;
+    font-size: 55px;
   }
 }
 
@@ -338,15 +339,6 @@
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 800;
   font-size: 25px;
-}
-
-.show-content {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: baseline;
-  margin-left: 2rem;
 }
 
 .show-user-buttons a {
